se cambia contenido de la tercera card y se corrige tildes, y se da un alto a las imagenes de las card

--- a/frontend/src/app/routes/carbon-footprint/carbon-footprint/carbon-footprint.component.html
+++ b/frontend/src/app/routes/carbon-footprint/carbon-footprint/carbon-footprint.component.html
@@ -1,13 +1,13 @@
 <div class="py-1 px-3">
  <div class="rounded shadow-lg px-3 mb-2">
     <h1 class="text-lg font-bold mb-2">Tu Huella de Carbono</h1>
-    <p class="text-sm mx-2">Descubre el impacto de tu consumo energético en el medio ambiente y aprende cómo reducir tu huella de carbono para un futuro más sostenible.</p>
+    <p class="text-sm mx-2 p-2">Descubre el impacto de tu consumo energético en el medio ambiente y aprende cómo reducir tu huella de carbono para un futuro más sostenible.</p>
   </div>
     <div class="container mx-auto py-2">
       <div class="grid grid-cols-2 md:grid-cols-4 gap-6 px-3" >
           <app-card-info
           [iconClasses]="'fa-solid fa-tree'"
-          [titleCard]="'Arboles'"
+          [titleCard]="'Árboles'"
           [dataCardProgress]="'5 unidades'"
           [subtitleCard]="'Cantidad a plantar'"
           [valueProgress]="10"
@@ -18,7 +18,7 @@
           [iconClasses]="'fa-solid fa-plane'"
           [titleCard]="'Horas de vuelo'"
           [dataCardProgress]="'500 km'"
-          [subtitleCard]="'km en avion'"
+          [subtitleCard]="'km en avión'"
           [valueProgress]="40"
           [maxProgress]="100"
           [colorProgress]="'progress progress-error w-ful'"
@@ -51,8 +51,9 @@
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 justify-center p-3">
           <!-- Card 1 -->
           <div class="card card-compact bg-base-100 w-full shadow-xl">
-            <figure>
+            <figure class="w-full">
               <img
+                class="w-full h-48 object-cover"
                 src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT8PNblzbHwiscfazhGYDPInct4EpBSxTNO1A&s"
                 alt="Huella de carbono" />
             </figure>
@@ -68,8 +69,9 @@
 
           <!-- Card 2 -->
           <div class="card card-compact bg-base-100 w-full shadow-xl">
-            <figure>
+            <figure class="w-full">
               <img
+                class="w-full h-48 object-cover"
                 src="https://www.infocampo.com.ar/wp-content/uploads/2024/10/WhatsApp-Image-2024-10-03-at-17.51.56.jpeg"
                 alt="Sustentabilidad" />
             </figure>
@@ -85,17 +87,18 @@
 
           <!-- Card 3 -->
           <div class="card card-compact bg-base-100 w-full shadow-xl">
-            <figure>
+            <figure class="w-full">
               <img
-                src="https://www.65ymas.com/uploads/s1/13/55/32/8/bigstock-one-old-senior-couple-at-home-470532111.jpeg"
+              class="w-full h-48 object-cover"
+                src="https://www.ecoportal.net/wp-content/uploads/2022/02/huella-de-carbono-rdn.jpg"
                 alt="Factura de luz y gas" />
             </figure>
             <div class="card-body">
-              <h2 class="card-title">Cómo leer mi factura</h2>
-              <p>Cómo leer las facturas de luz y gas para saber cuánto SUBSIDIO recibo.</p>
+              <h2 class="card-title">Consejos para reducir tu huella de carbono.</h2>
+              <p>Cómo reducir la huella de carbono: 8 consejos para ser más sostenible y frenar el cambio climático.</p>
               <div class="card-actions justify-start">
                 <a class="no-underline mt-6 inline-block bg-primary text-white px-6 py-3 rounded-lg shadow-sm hover:bg-primaryhover"
-                href="https://www.baenegocios.com/economia/Como-leer-las-facturas-de-luz-y-gas-para-saber-cuanto-SUBSIDIO-recibo-20240722-0016.html" target="_blank">Ver</a>
+                href="https://solarmente.es/blog/como-reducir-huella-carbono/" target="_blank">Ver</a>
               </div>
             </div>
           </div>
