--- a/frontend/src/app/routes/guides/guides.component.html
+++ b/frontend/src/app/routes/guides/guides.component.html
@@ -15,7 +15,7 @@
 
       <div class="bg-white p-4 rounded shadow">
         <img src="assets/img/Dispositivo.webp" alt="Instalaciones Domóticas" class="h-40 w-full object-cover mb-2">
-        <p> Dispocitivos instalación.pdf</p>
+        <p> Intalación dispocitivos.pdf</p>
         <p class="text-sm">383KB</p>
         <a href="assets/pdf/Manual%20Lytisc%20v%200.1.pdf" download class="text-blue-500 hover:text-blue-700">
           Descargar
@@ -24,7 +24,7 @@
 
       <div class="bg-white p-4 rounded shadow">
         <img src="assets/img/domotica%20buenas%20practicas.jpeg" alt="Instalaciones Domóticas" class="h-40 w-full object-cover mb-2">
-        <p>Info sobre domóticas.pdf</p>
+        <p>Información sobre domóticas.pdf</p>
         <p class="text-sm">129KB</p>
         <a href="assets/pdf/Manual%20Lytisc%20v%200.1.pdf" download class="text-blue-500 hover:text-blue-700">
           Descargar
@@ -42,7 +42,7 @@
   </div>
 </div>
 
-<!-- Bloque de Video -->
+<!--  Video -->
 <div class="mt-8 p-6 bg-teal-30 rounded-lg shadow-md flex flex-col md:flex-row items-center space-x-0 md:space-x-8">
   <div class="flex-1 mb-4 md:mb-0">
     <h3 class="text-2xl font-semibold mb-2">Crea un hogar inteligente y ahorra energía</h3>
@@ -56,8 +56,7 @@
       <li>Recibir notificaciones en tiempo real sobre el uso de energía en tu hogar, lo que te permite hacer ajustes inmediatos para reducir el consumo.</li>
       <li>Monitorear y gestionar el uso de recursos para identificar patrones y maximizar el ahorro energético.</li>
     </ul>
-    <!-- Uncomment the button if needed -->
-    <!-- <a href="#consejos" class="mt-4 bg-teal-500 text-white py-2 px-4 rounded inline-block">Consejos</a> -->
+
   </div>
   <div class="flex-shrink-0">
     <iframe width="100%" height="250" src="https://www.youtube.com/embed/8aGYzXi0YrU" title="Video sobre ahorro de energía" class="rounded-lg" allowfullscreen></iframe>
@@ -67,11 +66,11 @@
 
 
 <div class="bg-white p-6 rounded-lg shadow-lg">
-  <!-- Título centrado -->
+
   <h2 class="text-2xl font-bold mb-4 text-center">Cómo hacer tu casa más eficiente</h2>
 
 
-  <!-- Contenedor para las imágenes -->
+  <!--  imágenes -->
   <div class="flex flex-wrap justify-center gap-6 mt-6">
     <div class="bg-white p-4 rounded shadow-lg">
       <img src="assets/img/casa%20eficiente.webp" alt="Consejo 1" class="rounded-lg w-full max-w-xs h-auto object-cover">
