--- a/frontend/src/app/routes/dashboard/dashboard/dashboard.component.html
+++ b/frontend/src/app/routes/dashboard/dashboard/dashboard.component.html
@@ -24,7 +24,8 @@
     </div>
     <!-- Iframe -->
     <div class="mt-4">
-      <iframe src="https://lucasjorgereta.grafana.net/d/3gFLlroVz/demo-dashboard?from=2024-10-02T05:30:10.149Z&to=2024-10-02T11:30:10.149Z&refresh=5s&viewPanel=panel-2"
+      <iframe src="http://localhost:3000/d-solo/ee09ykb533ncwf/voltage?orgId=1&panelId=1&var-deviceId=08:A6:F7:24:71:98&refresh=5s
+"
               width="100%"
               height="300"
               frameborder="0"></iframe>
