se agrega la ruta del sibebar

--- a/frontend/src/app/core/sidebar/sidebar.component.html
+++ b/frontend/src/app/core/sidebar/sidebar.component.html
@@ -63,7 +63,7 @@
   <div>
     <ul class="menu menu-sm bg-base-100 rounded-box z-[1]">
       <li class="p-1">
-        <a [routerLink]="['mySubscription']" class="block p-2 rounded hover:bg-gray-300 transition" title="Mi Suscripcion">
+        <a [routerLink]="['misuscription']" class="block p-2 rounded hover:bg-gray-300 transition" title="Mi Suscripcion">
           <i class="inline-block w-5 h-5 p-1 fa-lg fa-solid fa-credit-card"></i>
           <span *ngIf="isSidebarOpen" class="ml-2 text-base">Mi Suscripcion</span>
         </a>
