--- a/frontend/src/app/routes/dashboard/dashboard/dashboard.component.html
+++ b/frontend/src/app/routes/dashboard/dashboard/dashboard.component.html
@@ -24,8 +24,7 @@
     </div>
     <!-- Iframe -->
     <div class="mt-4">
-      <iframe src="http://localhost:3000/d-solo/ee09ykb533ncwf/voltage?orgId=1&panelId=1&var-deviceId=08:A6:F7:24:71:98&refresh=5s
-"
+      <iframe src="http://localhost:3000/d-solo/ee09ykb533ncwf/voltage?orgId=1&panelId=1&var-deviceId=08:A6:F7:24:71:98&refresh=5s"
               width="100%"
               height="300"
               frameborder="0"></iframe>
