--- a/frontend/src/app/core/card/card-info.component.html
+++ b/frontend/src/app/core/card/card-info.component.html
@@ -1,27 +1,21 @@
-<!-- <div class="card bg-base-100 shadow-xl p-6 transform transition-transform hover:scale-105">
-  <div class="flex items-center mb-4">
-    <div class="flex items-center justify-center h-12 w-12 rounded-l">
-       <i [ngClass]="iconClasses" class="w-full h-full"></i>
-    </div>
-      <div class="ml-4">
-        <h2 class="card-title">{{titleCard}}</h2>
-        <p class="text-sm sm:text-base text-pretty">{{actualMonth}}</p>
-      </div>
-  </div>
-  <h2 class="card-title p-1">{{titleCardProgress}}</h2>
-  <progress class="progress progress-success w-full" value="{{valueProgress}}" max="{{maxProgress}}"></progress>
-</div> -->
-
 <div class="card bg-base-100 shadow-xl p-4 transform transition-transform hover:scale-105">
+  <!-- Icono y título -->
   <div class="flex items-center mb-2">
-    <div class="flex items-center justify-center h-8 w-8 rounded-l">
-      <i [ngClass]="iconClasses" class="w-full h-full"></i>
+    <div class="flex items-center justify-center h-10 w-10 rounded-lg bg-gray-100">
+      <i [ngClass]="iconClasses" class="text-2xl"></i>
     </div>
-    <div class="ml-2">
-      <h2 class="card-title text-sm">{{titleCard}}</h2>
-      <p class="text-xs sm:text-sm text-pretty">{{subtitleCard}}</p>
+    <div class="ml-3">
+      <h2 class="card-title text-lg font-semibold">{{ titleCard }}</h2>
+      <p class="text-xs text-gray-500">{{ subtitleCard }}</p>
     </div>
   </div>
-  <h2 class="card-title text-sm p-1">{{dataCardProgress}}</h2>
-  <progress [ngClass]="colorProgress" value="{{valueProgress}}" max="{{maxProgress}}"></progress>
+
+  <!-- Información principal y progreso -->
+  <div class="mt-2">
+    <h2 class="text-2xl font-bold">{{ dataCardProgress }}</h2>
+    <div class="flex items-center justify-between mt-1">
+      <progress [ngClass]="colorProgress" value="{{ valueProgress }}" max="{{ maxProgress }}" class="progress-bar"></progress>
+      <span class="text-xs ml-2" [ngClass]="percentageClass">{{ valueProgress }}%</span>
+    </div>
+  </div>
 </div>
