emparejar un dispositivo la primera vez

--- a/frontend/src/app/routes/home/home.component.html
+++ b/frontend/src/app/routes/home/home.component.html
@@ -21,4 +21,5 @@
       <app-alert></app-alert>
     </main>
   </div>
+  <app-device-popup [isOpen]="showPopup" (closePopup)="onPopupClose()"></app-device-popup>
 </div>
