asociar el dispositivo por primera ves

--- a/frontend/src/app/core/device-popup/device-popup.component.html
+++ b/frontend/src/app/core/device-popup/device-popup.component.html
@@ -20,12 +20,12 @@
 
       <div class="mt-4 flex justify-center">
         <div class="w-1/2 pr-2">
-          <img src="../../../assets/img/Dispo1.png" alt="Explicación 1"
-          class="rounded-lg w-full border border-gray-300 transition-transform duration-300 transform hover:scale-105" />
+          <img src="../../../assets/img/Dispo1.jpg" alt=""
+          class="rounded-lg w-full border border-gray-300 transition-transform duration-300 transform hover:scale-105 object-cover" />
         </div>
         <div class="w-1/2 pl-2">
-          <img src="../../../assets/img/Dispo2.png" alt="Explicación 2"
-          class="rounded-lg w-full border border-gray-300 transition-transform duration-300 transform hover:scale-105" />
+          <img src="../../../assets/img/Dsipo2.jpg" alt=""
+          class="rounded-lg w-full border border-gray-300 transition-transform duration-300 transform hover:scale-105 object-cover" />
         </div>
       </div>
 
@@ -41,12 +41,12 @@
 
       <div class="mt-4 flex justify-center">
         <div class="w-1/2 pr-2">
-          <img src="../../../assets/img/Dispo3.png" alt="Explicación 1"
-          class="rounded-lg w-full border border-gray-300 transition-transform duration-300 transform hover:scale-105" />
+          <img src="../../../assets/img/Dispo3.jpg" alt=""
+          class="rounded-lg w-full border border-gray-300 transition-transform duration-300 transform hover:scale-105 object-cover" />
         </div>
         <div class="w-1/2 pl-2">
-          <img src="../../../assets/img/Dispo4.png" alt="Explicación 2"
-          class="rounded-lg w-full border border-gray-300 transition-transform duration-300 transform hover:scale-105" />
+          <img src="../../../assets/img/Dispo4.jpg" alt=""
+          class="rounded-lg w-full border border-gray-300 transition-transform duration-300 transform hover:scale-105 object-cover" />
         </div>
       </div>
 
