--- a/frontend/src/app/core/toolbar/toolbar.component.html
+++ b/frontend/src/app/core/toolbar/toolbar.component.html
@@ -14,7 +14,7 @@
       <div>
         <span class="text-sm font-semibold">Locacion</span>
         <select class="border-none outline-none bg-transparent text-gray-500">
-          <option>Casa 1</option>
+          <option>Hogar 1</option>
           <option>Oficina</option>
         </select>
       </div>
@@ -25,8 +25,8 @@
       <div>
         <span class="text-sm font-semibold">Dispositivo</span>
         <select class="border-none outline-none bg-transparent text-gray-500">
-          <option>rtxv45000</option>
-          <option>Dispositivo 2</option>
+          <option>LyticsHogar 1</option>
+          <option></option>
         </select>
       </div>
     </div>
@@ -49,7 +49,7 @@
     <div class="relative">
       <button class="flex items-center space-x-2">
         <img src="https://www.w3schools.com/howto/img_avatar2.png" alt="Usuario" class="w-8 h-8 rounded-full">
-        <span>Usuario</span>
+        <span>FabricioY</span>
         <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"/>
         </svg>
