--- a/frontend/src/app/routes/auth/login/login.component.html
+++ b/frontend/src/app/routes/auth/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="bg-gray-50 flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
   <div class="sm:mx-auto sm:w-full sm:max-w-sm">
-    <img class="mx-auto h-10 w-auto" src="../../../assets/img/IsoTipoLyticsGrilla.png" alt="Your Company">
+    <img class="mx-auto h-10 w-auto" src="../../../assets/img/Lytics_New.png" alt="Your Company">
     <h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900">Sign in to your account</h2>
   </div>
 
