se agrego un componente para los titulos y descripcion estandarizados

--- a/frontend/src/app/routes/carbon-footprint/carbon-footprint/carbon-footprint.component.html
+++ b/frontend/src/app/routes/carbon-footprint/carbon-footprint/carbon-footprint.component.html
@@ -1,8 +1,6 @@
+<app-panel-title title="Tu Huella de Carbono" description="Descubre el impacto de tu consumo energético en el medio ambiente y aprende cómo reducir tu huella de carbono para un futuro más sostenible."></app-panel-title>
 <div class="py-1 px-3">
- <div class="rounded shadow-lg px-3 mb-2">
-    <h1 class="text-lg font-bold mb-2">Tu Huella de Carbono</h1>
-    <p class="text-sm mx-2">Descubre el impacto de tu consumo energético en el medio ambiente y aprende cómo reducir tu huella de carbono para un futuro más sostenible.</p>
-  </div>
+
     <div class="container mx-auto py-2">
       <div class="grid grid-cols-2 md:grid-cols-4 gap-6 px-3" >
           <app-card-info
