--- a/frontend/src/app/routes/configuracion/configuracion.component.html
+++ b/frontend/src/app/routes/configuracion/configuracion.component.html
@@ -1,8 +1,5 @@
 
-<div class="grid grid-cols-1 gap-4 mb-4 bg-white px-10 py-4">
-  <h2 class="text-2xl font-bold">Selecciona el Perfil de tu casa</h2>
-  <p class="text-pretty">Selecciona el perfil que mejor describe tu hogar para obtener una configuración de consumo de energía personalizada.</p>
-</div>
+<app-panel-title title="Selecciona el Perfil de tu casa" description="Selecciona el perfil que mejor describe tu hogar para obtener una configuración de consumo de energía personalizada."></app-panel-title>
 
 
 <div class="container mx-auto py-4 px-10">
