--- a/frontend/src/app/routes/guides/guides.component.html
+++ b/frontend/src/app/routes/guides/guides.component.html
@@ -1,7 +1,7 @@
+<app-panel-title title="Guías y Tutoriales" description="Te brindamos informacion util, para conocer más como funciona
+                        nuestro producto y como hacer ser un experto del consumo eficiente."></app-panel-title>
 <div class="flex full-screen">
   <div class="p-4">
-    <!-- Título de la Sección -->
-    <h2 class="text-xl font-bold mb-6 text-center">Guías y Tutoriales</h2>
     <!-- Panel de Archivos -->
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
       <div class="bg-white p-4 rounded shadow">
