--- a/frontend/src/app/routes/misuscription/misuscription.component.html
+++ b/frontend/src/app/routes/misuscription/misuscription.component.html
@@ -1,8 +1,5 @@
+<app-panel-title title="Mis Suscripciones" description="Administra y revisa tus planes de suscripción aquí."></app-panel-title>
 <div class="py-1 px-3">
-  <div class="rounded shadow-lg px-3 mb-2">
-    <h1 class="text-lg font-bold mb-2">Mis Suscripciones</h1>
-    <p class="text-sm mx-2">Administra y revisa tus planes de suscripción aquí.</p>
-  </div>
 
   <div class="container mx-auto py-2">
     <h2 class="text-2xl font-bold mb-4">Tus Planes Actuales</h2>
