--- a/frontend/src/app/routes/reportes/reportes.component.html
+++ b/frontend/src/app/routes/reportes/reportes.component.html
@@ -1,4 +1,5 @@
-<h2 class="text-2xl mb-4 font-bold leading-tight text-gray-900">Reportes</h2>
+<app-panel-title title="Reportes" description="Puedes generar informes con el rango de fechas que necesites."></app-panel-title>
+<h2 class="text-2xl mb-4 font-bold leading-tight text-gray-900"></h2>
 <hr class="my-4">
 <div class="flex justify-center mt-4">
     <div class="flex space-x-4">
