--- a/frontend/src/app/routes/dashboard-historico/dashboard-historico.component.html
+++ b/frontend/src/app/routes/dashboard-historico/dashboard-historico.component.html
@@ -1,9 +1,5 @@
+<app-panel-title title="Históricos" description="Seleccione el gráfico que desee visualizar."></app-panel-title>
 <div class="py-1 px-3">
-    <!-- Título y descripción -->
-    <div class="rounded shadow-lg p-2">
-      <h1 class="text-lg font-bold mb-4">Históricos</h1>
-      <p class="text-sm">Seleccione el gráfico que desee visualizar</p>
-    </div>
 
     <div class="flex flex-col lg:flex-row space-y-4 lg:space-y-0 lg:space-x-4 mt-1">
 
