--- a/frontend/src/app/routes/mis-dispositivos/mis-dispositivos.component.html
+++ b/frontend/src/app/routes/mis-dispositivos/mis-dispositivos.component.html
@@ -1,6 +1,6 @@
 <app-panel-title title="Mis Dispositivos" description="Esta es una breve descripción de la página de inicio."></app-panel-title>
 <div class="py-1 px-3 ">
-  <div class="rounded shadow-lg p-2">
+  <div class="p-2">
     <button class="bg-secondary text-white px-4 py-2 rounded mb-4 mx-1" (click)="openCodeModal()">Agregar Lytics</button>
     <button class="bg-primary text-white px-4 py-2 rounded mb-4 mx-1" (click)="openModal()">Agregar Dispositivo de casa</button>
   </div>
