Cambio imagen en tour,
Completario a Device,

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -10,29 +10,30 @@ html, body { height: 100%; }
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-/*intro js */
+/* intro js */
 .introjs-tooltip {
-  @apply bg-gray-800 text-white p-4 rounded-lg shadow-md;
+  @apply bg-white text-black p-4 rounded-lg shadow-md; /* Fondo blanco y texto negro */
 }
 
 .introjs-tooltiptext {
-  @apply text-base text-white;
+  @apply text-base text-black; /* Texto negro */
 }
 
 .introjs-tooltipbuttons {
-  @apply flex justify-between mt-4;
+  @apply flex justify-between mt-4; /* Mantén la estructura flex de los botones */
 }
 
 .introjs-button {
-  @apply bg-blue-500 text-white py-2 px-4 rounded-md hover:bg-blue-600 transition-all;
+  @apply bg-gray-200 text-black py-2 px-4 rounded-md hover:bg-gray-300 transition-all; /* Botón "Next" en estilo gris */
 }
 
 .introjs-button-back {
-  @apply bg-gray-200 text-gray-700 py-2 px-4 rounded-md hover:bg-gray-300 transition-all;
+  @apply bg-blue-500 text-white py-2 px-4 rounded-md hover:bg-blue-600 transition-all; /* Botón "Back" estilo azul */
 }
 
 .introjs-helperLayer {
-  background-color: rgba(0, 123, 255, 0.4); /* No necesita Tailwind */
+  background-color: rgba(0, 123, 255, 0.4); /* No necesita cambios */
 }
+
 
 
