--- a/frontend/src/app/routes/dashboard/dashboard/dashboard.component.html
+++ b/frontend/src/app/routes/dashboard/dashboard/dashboard.component.html
@@ -9,15 +9,13 @@
       [maxProgress]="100"
       [colorProgress]="''"
     ></app-card-info>
-    <app-card-info id="step2"
+    <app-card-real-time id="step2"
       [iconClasses]="'fas fa-cloud-rain'"
       [titleCard]="'Humedad'"
-      [dataCardProgress]="'50 g/m3'"
       [subtitleCard]="'Relativa'"
-      [valueProgress]="50"
       [maxProgress]="100"
       [colorProgress]="'progress progress-info w-ful'"
-    ></app-card-info>
+    ></app-card-real-time>
     <app-card-info id="step3"
       [iconClasses]="'fas fa-thermometer-half'"
       [titleCard]="'Temperatura'"
@@ -50,9 +48,8 @@
         <p class="text-gray-500">El voltaje estándar es de 220 V y la frecuencia de la corriente alterna es de 50 Hz</p>
       </div>
       <button (click)="toggleExpand(1)" class="text-gray-500 hover:text-gray-800">
-
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-6 h-6">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
         </svg>
       </button>
     </div>
