Condicion temperatura+Humedad(datacardProgress)
Falta cambiar nombre

--- a/frontend/src/app/routes/dashboard/dashboard/dashboard.component.html
+++ b/frontend/src/app/routes/dashboard/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
       [titleCard]="'Buenos Aires'"
       [dataCardProgress]="'19:50 Hs'"
       [subtitleCard]="'San Justo'"
-      [valueProgress]="100"
+      [valueProgress]="1"
       [maxProgress]="100"
       [colorProgress]="''"
     ></app-card-info>
@@ -16,15 +16,14 @@
       [maxProgress]="100"
       [colorProgress]="'progress progress-info w-ful'"
     ></app-card-real-time>
-    <app-card-info id="step3"
+    <app-card-real-time id="step3"
       [iconClasses]="'fas fa-thermometer-half'"
       [titleCard]="'Temperatura'"
-      [dataCardProgress]="'25°C'"
       [subtitleCard]="'Grados Celsius'"
-      [valueProgress]="25"
+      [valueProgress]="10"
       [maxProgress]="100"
       [colorProgress]="'progress progress-error w-ful'"
-    ></app-card-info>
+    ></app-card-real-time>
     <app-card-info id="step4"
       [iconClasses]="'fas fa-dollar-sign'"
       [titleCard]="'Consumo Real'"
