--- a/frontend/src/app/routes/dashboard/dashboard/dashboard.component.html
+++ b/frontend/src/app/routes/dashboard/dashboard/dashboard.component.html
@@ -1,14 +1,12 @@
 <div class="container mx-auto py-1">
   <div class="grid grid-cols-2 md:grid-cols-4 gap-6 px-3">
-    <app-card-info id="step1"
+    <app-card-real-time id="step1"
       [iconClasses]="'fas fa-clock'"
-      [titleCard]="'Buenos Aires'"
-      [dataCardProgress]="'19:50 Hs'"
+      [titleCard]="'Horario'"
       [subtitleCard]="'San Justo'"
-      [valueProgress]="1"
       [maxProgress]="100"
       [colorProgress]="''"
-    ></app-card-info>
+    ></app-card-real-time>
     <app-card-real-time id="step2"
       [iconClasses]="'fas fa-cloud-rain'"
       [titleCard]="'Humedad'"
