--- a/frontend/src/app/routes/dashboard-historico/dashboard-historico.component.html
+++ b/frontend/src/app/routes/dashboard-historico/dashboard-historico.component.html
@@ -1,59 +1,49 @@
 <app-panel-title title="Históricos" description="Seleccione el gráfico que desee visualizar."></app-panel-title>
 <div class="py-1 px-3">
 
-    <div class="flex flex-col lg:flex-row space-y-4 lg:space-y-0 lg:space-x-4 mt-1">
+  <div class="mb-4 lg:ml-12">
+    <select (change)="toggleGrafico($event)" class="p-2 border rounded w-full lg:w-1/5 bg-white">
+      <option value="consumption" selected>Consumo Mensual </option>
+      <option value="daily">Consumo En Franjas Horarias</option>
+      <option value="amperage">Intensidad de amperaje</option>
+      <option value="power">Potencia</option>
+      <option value="frequency">Frecuencia</option>
+    </select>
+  </div>
 
-      <div class="flex flex-col space-y-2 w-full lg:w-1/5 bg-[#f9fbff] p-4 rounded-sm">
-        <label class="flex items-center justify-between">
-          Consumo Mensual
-          <input type="radio" name="grafico" (change)="toggleGrafico('consumption')" class="ml-auto" checked />
-        </label>
-        <label class="flex items-center justify-between">
-          Consumo Diario
-          <input type="radio" name="grafico" (change)="toggleGrafico('daily')" class="ml-auto" />
-        </label>
-        <label class="flex items-center justify-between">
-          Intensidad de amperaje
-          <input type="radio" name="grafico" (change)="toggleGrafico('amperage')" class="ml-auto" />
-        </label>
-        <label class="flex items-center justify-between">
-          Potencia
-          <input type="radio" name="grafico" (change)="toggleGrafico('power')" class="ml-auto" />
-        </label>
-        <label class="flex items-center justify-between">
-          Frecuencia
-          <input type="radio" name="grafico" (change)="toggleGrafico('frequency')" class="ml-auto" />
-        </label>
-      </div>
-
-
+  <div class="flex flex-col lg:flex-row items-center space-y-4 lg:space-y-0 lg:space-x-4 mt-1">
+    <div class="card bg-base-100 shadow-xl p-4 w-full lg:w-2/3 lg:ml-12">
+      <p class="text-mx font-semibold text-gray-700 mb-4">
+        {{ graficoActual }}
+      </p>
       <div class="border rounded-lg h-64 flex items-center justify-center">
-        <iframe *ngIf="mostrarConsumoMensual" [src]="consumoMensual | safeUrl" class="w-full h-64 lg:h-96 py-8 "></iframe>
+        <iframe *ngIf="mostrarConsumoMensual" [src]="consumoMensual | safeUrl" class="w-full h-64 lg:h-96 py-8"></iframe>
         <iframe *ngIf="mostrarConsumoDiario" [src]="consumoDiario | safeUrl" class="w-full h-64 lg:h-96 py-8"></iframe>
         <iframe *ngIf="mostrarAmperaje" [src]="intensidadAmperaje | safeUrl" class="w-full h-64 lg:h-96 py-8"></iframe>
         <iframe *ngIf="mostrarPotencia" [src]="potencia | safeUrl" class="w-full h-64 lg:h-96 py-8"></iframe>
         <iframe *ngIf="mostrarFrecuencia" [src]="frecuencia | safeUrl" class="w-full h-64 lg:h-96 py-8"></iframe>
       </div>
     </div>
+  </div>
+</div>
 
-    <div class="rounded shadow-lg">
-      <h1 class="text-lg font-bold mb-4 mx-2">Alertas Históricas</h1>
-      <p class="text-sm mx-2">Seleccione el tipo de alerta que desee visualizar</p>
+<div class="mt-4">
+  <app-panel-title title="Alertas Históricas" description="Elija el tipo de alerta disponible."></app-panel-title>
 
+  <div class="px-4 lg:ml-12">
     <select class="p-2 border rounded w-full sm:w-1/3 lg:w-1/4 my-2" (change)="aplicarFiltro($event)">
       <option value="todos">Todos</option>
       <option value="corte">Corte de energía</option>
       <option value="dispositivo">Nuevo dispositivo</option>
       <option value="consumo">Alerta de alto consumo</option>
     </select>
-
-    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
-      <div *ngFor="let alerta of getAlertasFiltradas()"
-           class="bg-white p-4 rounded-lg shadow-lg transition-colors duration-300 hover:bg-blue-300 hover:text-white">
-        <p class="text-gray-700">{{ alerta.descripcion }}</p>
-      </div>
+  </div>
+  <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
+    <div *ngFor="let alerta of getAlertasFiltradas()"
+         class="bg-white p-4 rounded-lg shadow-lg transition-colors duration-300 hover:bg-blue-300 hover:text-white">
+      <p class="text-gray-700">{{ alerta.descripcion }}</p>
     </div>
-    </div>
+  </div>
 </div>
 
 
