--- a/frontend/src/app/routes/guides/guides.component.html
+++ b/frontend/src/app/routes/guides/guides.component.html
@@ -1,135 +1,140 @@
-<app-panel-title title="Guías y Tutoriales" description="Te brindamos informacion util, para conocer más como funciona
-                        nuestro producto y como hacer ser un experto del consumo eficiente."></app-panel-title>
-<div class="flex full-screen">
+<div class="flex flex-col full-screen">
   <div class="p-4">
+    <!-- Panel Title Refactorizado -->
+    <app-panel-title title="Guías y Tutoriales" description="Explora nuestras guías y tutoriales para aprender más sobre nuestras soluciones."></app-panel-title>
+
     <!-- Panel de Archivos -->
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
       <div class="bg-white p-4 rounded shadow">
-        <img src="assets/img/isoimgpdf.jpeg" alt="Instalaciones Domóticas" class="h-40 w-full object-cover mb-2">
+        <img src="assets/img/Lytics_new_logo.png" alt="Instalaciones Domóticas" class="h-40 w-full object-cover mb-2">
         <p>Lytics.pdf</p>
         <p class="text-sm">289KB</p>
-        <a href="assets/pdf/Manual%20Lytisc%20v%200.1.pdf " download class="text-blue-500 hover:text-blue-700">
-          Descargar
-        </a>
+        <a href="assets/pdf/Manual%20Lytisc%20v%200.1.pdf" download class="text-blue-500 hover:text-blue-700">Descargar</a>
       </div>
 
       <div class="bg-white p-4 rounded shadow">
         <img src="assets/img/Dispositivo.webp" alt="Instalaciones Domóticas" class="h-40 w-full object-cover mb-2">
-        <p> Intalación dispocitivos.pdf</p>
+        <p>Instalación dispositivos.pdf</p>
         <p class="text-sm">383KB</p>
-        <a href="assets/pdf/Manual%20Lytisc%20v%200.1.pdf" download class="text-blue-500 hover:text-blue-700">
-          Descargar
-        </a>
+        <a href="assets/pdf/Manual%20Lytisc%20v%200.1.pdf" download class="text-blue-500 hover:text-blue-700">Descargar</a>
       </div>
 
       <div class="bg-white p-4 rounded shadow">
         <img src="assets/img/domotica%20buenas%20practicas.jpeg" alt="Instalaciones Domóticas" class="h-40 w-full object-cover mb-2">
         <p>Información sobre domóticas.pdf</p>
         <p class="text-sm">129KB</p>
-        <a href="assets/pdf/Manual%20Lytisc%20v%200.1.pdf" download class="text-blue-500 hover:text-blue-700">
-          Descargar
-        </a>
+        <a href="assets/pdf/Manual%20Lytisc%20v%200.1.pdf" download class="text-blue-500 hover:text-blue-700">Descargar</a>
       </div>
+
       <div class="bg-white p-4 rounded shadow">
         <img src="assets/img/veneficios.jpeg" alt="Instalaciones Domóticas" class="h-40 w-full object-cover mb-2">
-        <p>software Lytics.pdf</p>
+        <p>Software Lytics.pdf</p>
         <p class="text-sm">490KB</p>
-        <a href="assets/pdf/Manual%20Lytisc%20v%200.1.pdf" download class="text-blue-500 hover:text-blue-700">
-          Descargar
-        </a>
+        <a href="assets/pdf/Manual%20Lytisc%20v%200.1.pdf" download class="text-blue-500 hover:text-blue-700">Descargar</a>
       </div>
     </div>
   </div>
 </div>
 
-<!--  Video -->
-<div class="mt-8 p-6 bg-teal-30 rounded-lg shadow-md flex flex-col md:flex-row items-center space-x-0 md:space-x-8">
-  <div class="flex-1 mb-4 md:mb-0">
-    <h3 class="text-2xl font-semibold mb-2">Crea un hogar inteligente y ahorra energía</h3>
-    <p class="text-gray-800 mb-4">
-      Convierte tu hogar en un espacio más eficiente, económico y sostenible. Con tecnologías inteligentes, puedes:
-    </p>
-    <ul class="list-disc ml-5 text-gray-800 mb-4">
-      <li>Controlar y automatizar la iluminación, ajustando el uso de luz artificial según la luz natural disponible, lo que reduce significativamente el consumo energético.</li>
-      <li>Optimizar la climatización, regulando automáticamente la temperatura y evitando el gasto excesivo de energía.</li>
-      <li>Supervisar el consumo de electrodomésticos, apagando aquellos que no se estén utilizando o programándolos para horarios de menor costo energético.</li>
-      <li>Recibir notificaciones en tiempo real sobre el uso de energía en tu hogar, lo que te permite hacer ajustes inmediatos para reducir el consumo.</li>
-      <li>Monitorear y gestionar el uso de recursos para identificar patrones y maximizar el ahorro energético.</li>
-    </ul>
+<!-- Panel con título y descripción -->
+<app-panel-title title="Mis Dispositivos" description="Esta es una breve descripción de la página de inicio."></app-panel-title>
 
-  </div>
-  <div class="flex-shrink-0">
-    <iframe width="100%" height="250" src="https://www.youtube.com/embed/8aGYzXi0YrU" title="Video sobre ahorro de energía" class="rounded-lg" allowfullscreen></iframe>
-
-  </div>
-</div>
-
-
-<div class="bg-white p-6 rounded-lg shadow-lg">
-
-  <h2 class="text-2xl font-bold mb-4 text-center">Cómo hacer tu casa más eficiente</h2>
-
-
-  <!--  imágenes -->
-  <div class="flex flex-wrap justify-center gap-6 mt-6">
-    <div class="bg-white p-4 rounded shadow-lg">
-      <img src="assets/img/casa%20eficiente.webp" alt="Consejo 1" class="rounded-lg w-full max-w-xs h-auto object-cover">
+<!-- Contenido principal -->
+<div class="py-1 px-3">
+  <!-- Video y lista de beneficios -->
+  <div class="mt-8 p-2 bg-teal-30 rounded-lg shadow-md flex flex-col md:flex-row items-center space-y-4 md:space-y-0 md:space-x-8">
+    <div class="flex-1 mb-4 md:mb-0">
+      <h3 class="text-2xl font-semibold mb-2">Crea un hogar inteligente y ahorra energía</h3>
+      <p class="text-gray-800 mb-4">
+        Convierte tu hogar en un espacio más eficiente, económico y sostenible. Con tecnologías inteligentes, puedes:
+      </p>
+      <ul class="list-disc ml-5 text-gray-800 mb-4">
+        <li>Controlar y automatizar la iluminación para reducir el consumo energético.</li>
+        <li>Optimizar la climatización ajustando la temperatura automáticamente.</li>
+        <li>Supervisar el consumo de electrodomésticos y apagarlos cuando no se usan.</li>
+        <li>Recibir notificaciones en tiempo real sobre el uso de energía.</li>
+        <li>Monitorear patrones de consumo para maximizar el ahorro.</li>
+      </ul>
     </div>
-    <div class="bg-white p-4 rounded shadow-lg">
-      <img src="assets/img/casasPersonas.webp" alt="Consejo 2" class="rounded-lg w-full max-w-xs h-auto object-cover">
+    <!-- Video -->
+    <div class="w-full md:w-auto">
+      <iframe width="100%" height="250" src="https://www.youtube.com/embed/8aGYzXi0YrU" title="Video sobre ahorro de energía" class="rounded-lg" allowfullscreen></iframe>
     </div>
   </div>
+
+  <!-- Sección de imágenes -->
+  <div class="bg-white p-6 rounded-lg shadow-lg mt-6">
+    <h2 class="text-2xl font-bold mb-4 text-center">Cómo hacer tu casa más eficiente</h2>
+    <div class="flex flex-wrap justify-center gap-6 mt-6">
+      <div class="bg-white p-4 rounded shadow-lg">
+        <img src="assets/img/casa%20eficiente.webp" alt="Consejo 1" class="rounded-lg w-full max-w-xs h-auto object-cover">
+      </div>
+      <div class="bg-white p-4 rounded shadow-lg">
+        <img src="assets/img/casasPersonas.webp" alt="Consejo 2" class="rounded-lg w-full max-w-xs h-auto object-cover">
+      </div>
+    </div>
+  </div>
+
+  <!-- Sección de servicios o consejos -->
+  <section class="bg-gray-50 py-10">
+    <div class="container mx-auto px-6 lg:px-8 text-center flex flex-col items-center justify-center">
+      <h2 class="text-3xl font-extrabold text-black mb-8">Consejos</h2>
+      <h5 class="font-bold text-primary mb-8">Aquí van tus consejos...</h5>
+      <p class="text-lg text-gray-700 p-1 max-w-3xl prose">
+        Para mejorar la eficiencia energética de tu hogar, considera medidas como optimizar el uso de electrodomésticos,
+        utilizar iluminación LED y aislar correctamente las ventanas y puertas. Estos cambios te ayudarán a ahorrar energía.
+      </p>
+
+      <!-- Tarjetas de consejos -->
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mt-8">
+        <!-- Tarjeta 1 -->
+        <div class="bg-white p-6 rounded-lg shadow-lg prose transform transition-transform hover:scale-105">
+          <h3 class="mt-6 font-semibold text-gray-900">Consumos</h3>
+          <p class="mt-2 text-gray-600">
+            Mantener tus electrodomésticos en buen estado y desconectar los que no usas reduce el consumo energético.
+          </p>
+        </div>
+
+        <!-- Tarjeta 2 -->
+        <div class="bg-white p-6 rounded-lg shadow-lg prose transform transition-transform hover:scale-105">
+          <h3 class="mt-6 font-semibold text-gray-900">Temperatura</h3>
+          <p class="mt-2 text-gray-600">
+            Ajustar el termostato entre 18°C y 21°C en invierno y entre 24°C y 26°C en verano mejora la eficiencia energética.
+          </p>
+        </div>
+
+        <!-- Tarjeta 3 -->
+        <div class="bg-white p-6 rounded-lg shadow-lg prose transform transition-transform hover:scale-105">
+          <h3 class="mt-6 font-semibold text-gray-900">Ventanas</h3>
+          <p class="mt-2 text-gray-600">
+            Asegúrate de que las ventanas y puertas estén correctamente selladas para evitar pérdidas de energía.
+          </p>
+        </div>
+
+        <!-- Tarjeta 4 -->
+        <div class="bg-white p-6 rounded-lg shadow-lg prose transform transition-transform hover:scale-105">
+          <h3 class="mt-6 font-semibold text-gray-900">Selladores</h3>
+          <p class="mt-2 text-gray-600">
+            Usa burletes para sellar las fugas de aire en puertas y ventanas, lo que reduce el consumo de energía.
+          </p>
+        </div>
+
+        <!-- Tarjeta 5 -->
+        <div class="bg-white p-6 rounded-lg shadow-lg prose transform transition-transform hover:scale-105">
+          <h3 class="mt-6 font-semibold text-gray-900">Luces</h3>
+          <p class="mt-2 text-gray-600">
+            Cambiar las bombillas por LED puede reducir significativamente el consumo de energía.
+          </p>
+        </div>
+
+        <!-- Tarjeta 6 -->
+        <div class="bg-white p-6 rounded-lg shadow-lg prose transform transition-transform hover:scale-105">
+          <h3 class="mt-6 font-semibold text-gray-900">Termostato</h3>
+          <p class="mt-2 text-gray-600">
+            Un termostato programable te ayuda a optimizar el uso de energía ajustando la temperatura de tu hogar.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
 </div>
-
-<!-- Nuestros Servicios -->
-    <section  class="bg-gray-50 py-10">
-      <div class="container mx-auto px-6 lg:px-8 text-center flex flex-col items-center justify-center">
-        <h2 class="text-3xl font-extrabold text-black mb-8">Consejos</h2>
-        <h5 class="font-bold text-primary mb-8">Aquí van tus consejos...</h5>
-        <!-- Centramos el párrafo -->
-        <p class="text-lg text-gray-700 p-1 max-w-3xl prose">Para mejorar la eficiencia energética de tu hogar, es importante considerar varias medidas, como optimizar
-          el uso de electrodomésticos, utilizar iluminación LED
-          y aislar correctamente las ventanas y puertas. Estos pequeños cambios pueden ayudarte a reducir el
-          consumo de energía y ahorrar en tus facturas.</p> <!-- Tarjetas de beneficios -->
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mt-8">
-
-          <div class="bg-white p-6 rounded-lg shadow-lg prose transform transition-transform hover:scale-105">
-
-             <h3 class="mt-6 font-semibold text-gray-900">Consumos</h3>
-             <p class="mt-2 text-gray-600">Mantener tus electrodomésticos en buen estado, desconectar los que no utilices y optar por modelos de bajo consumo son algunas de las maneras más
-               efectivas de reducir el consumo de energía en casa.</p>
-           </div>
-
-           <div class="bg-white p-6 rounded-lg shadow-lg prose transform transition-transform hover:scale-105">
-
-             <h3 class="mt-6 font-semibold text-gray-900">Temperatura</h3>
-             <p class="mt-2 text-gray-600">Ajustar el termostato de tu hogar puede hacer una gran diferencia en el consumo energético. Durante el invierno, mantener la temperatura entre 18°C y 21°C es ideal, mientras que en verano, mantenerla alrededor de 24°C a 26°C puede ayudarte a ahorrar energía. También considera usar ventiladores para hacer circular el aire y mejorar la eficiencia del sistema de calefacción y refrigeración.</p>
-           </div>
-
-           <div class="bg-white p-6 rounded-lg shadow-lg prose transform transition-transform hover:scale-105">
-
-             <h3 class="mt-6 font-semibold text-gray-900">Ventanas</h3>
-             <p class="mt-2 text-gray-600">Asegúrate de que las ventanas y puertas de tu hogar estén correctamente selladas. Un buen aislamiento evita la pérdida de calor en invierno
-               y reduce la necesidad de aire acondicionado en verano, optimizando el consumo energético.</p>
-           </div>
-
-           <div class="bg-white p-6 rounded-lg shadow-lg prose transform transition-transform hover:scale-105">
-
-             <h3 class="mt-6 font-semibold text-gray-900">Selladores</h3>
-             <p class="mt-2 text-gray-600">Revisa las puertas y ventanas de tu hogar en busca de posibles fugas de aire. Utiliza burletes o selladores para cerrar cualquier espacio por donde pueda entrar el aire exterior. Esto no solo ayuda a mantener la temperatura deseada dentro de tu hogar, sino que también reduce la carga en tu sistema de calefacción y refrigeración, lo que a su vez disminuye el consumo de energía.</p>
-           </div>
-
-           <div class="bg-white p-6 rounded-lg shadow-lg prose transform transition-transform hover:scale-105">
-
-             <h3 class="mt-6 font-semibold text-gray-900">Luces</h3>
-             <p class="mt-2 text-gray-600">Las bombillas LED son más eficientes que las bombillas incandescentes, ya que consumen hasta un 80% menos de energía y tienen una vida útil mucho más larga. Cambiar todas las bombillas de tu hogar por LED puede reducir significativamente tu consumo energético, lo que se traduce en ahorros en tus facturas de electricidad.</p>
-           </div>
-
-           <div class="bg-white p-6 rounded-lg shadow-lg prose transform transition-transform hover:scale-105">
-
-             <h3 class="mt-6 font-semibold text-gray-900">Termostato</h3>
-             <p class="mt-2 text-gray-600">Un termostato programable te permite ajustar automáticamente la temperatura de tu hogar en función de tus horarios y necesidades. Puedes programar el termostato para que baje la temperatura cuando no estás en casa o durante la noche, y así optimizar el uso de energía de manera eficiente.</p>
-           </div>
-         </div>
-       </div>
-     </section>
