--- a/frontend/src/app/core/device-popup/device-popup.component.html
+++ b/frontend/src/app/core/device-popup/device-popup.component.html
@@ -58,9 +58,13 @@
     <!-- Paso 4 -->
     <div *ngIf="step === 4">
       <p class="py-4">Ahora ingresa el código de emparejamiento que obtuviste:</p>
-      <input type="text" class="input input-bordered w-full max-w-xs" placeholder="Código de emparejamiento" />
-      <p class="py-4">Puedes darle un nombre a tu dispositivo:</p>
-      <input type="text" class="input input-bordered w-full max-w-xs" placeholder="LyticsHogar1" />
+      <input type="text" class="input input-bordered w-full max-w-xs" placeholder="Código de emparejamiento"
+      [(ngModel)]="pairingCode" name="pairingCode" required />
+      <div *ngIf="errorMessage" class="text-red-500 mt-2">
+        {{ errorMessage }}
+      </div>
+     <!-- <p class="py-4">Puedes darle un nombre a tu dispositivo:</p>
+      <input type="text" class="input input-bordered w-full max-w-xs" placeholder="LyticsHogar1" />-->
     </div>
 
     <!-- Paso 5 -->
