se unifica formato

--- a/frontend/src/app/routes/carbon-footprint/carbon-footprint/carbon-footprint.component.html
+++ b/frontend/src/app/routes/carbon-footprint/carbon-footprint/carbon-footprint.component.html
@@ -1,10 +1,10 @@
 <div class="py-1 px-3">
- <div class="rounded shadow-lg px-3 mb-2">
-    <h1 class="text-lg font-bold mb-2">Tu Huella de Carbono</h1>
-    <p class="text-sm mx-2">Descubre el impacto de tu consumo energético en el medio ambiente y aprende cómo reducir tu huella de carbono para un futuro más sostenible.</p>
+ <div class="rounded shadow-lg p-2">
+    <h1 class="text-lg font-bold mb-4">Tu Huella de Carbono</h1>
+    <p class="text-sm text-gray-600">Descubre el impacto de tu consumo energético en el medio ambiente y aprende cómo reducir tu huella de carbono para un futuro más sostenible.</p>
   </div>
-    <div class="container mx-auto py-2">
-      <div class="grid grid-cols-2 md:grid-cols-4 gap-6 px-3" >
+    <div class="container mx-auto py-4">
+      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-8" >
           <app-card-info
           [iconClasses]="'fa-solid fa-tree'"
           [titleCard]="'Arboles'"
@@ -51,15 +51,16 @@
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 justify-center p-3">
           <!-- Card 1 -->
           <div class="card card-compact bg-base-100 w-full shadow-xl">
-            <figure>
+            <figure class="h-48">
               <img
                 src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT8PNblzbHwiscfazhGYDPInct4EpBSxTNO1A&s"
-                alt="Huella de carbono" />
+                alt="Huella de carbono"
+                class="h-full w-full object-cover"/>
             </figure>
             <div class="card-body">
               <h2 class="card-title">¿Qué es la huella de carbono?</h2>
               <p>Explicación clara y concisa sobre qué es la huella de carbono, cómo se genera y cómo el consumo eléctrico contribuye a ella.</p>
-              <div class="card-actions justify-start">
+              <div class="card-actions justify-centerv ">
                 <a class="no-underline mt-6 inline-block bg-primary text-white px-6 py-3 rounded-lg shadow-sm hover:bg-primaryhover"
                 href="https://espanol.epa.gov/la-energia-y-el-medioambiente/emisiones-de-dioxido-de-carbono" target="_blank">Ver</a>
               </div>
@@ -68,15 +69,16 @@
 
           <!-- Card 2 -->
           <div class="card card-compact bg-base-100 w-full shadow-xl">
-            <figure>
+            <figure class="h-48">
               <img
                 src="https://www.infocampo.com.ar/wp-content/uploads/2024/10/WhatsApp-Image-2024-10-03-at-17.51.56.jpeg"
-                alt="Sustentabilidad" />
+                alt="Sustentabilidad"
+                class="h-full w-full object-cover"/>
             </figure>
             <div class="card-body">
               <h2 class="card-title">Sustentabilidad</h2>
               <p>Sustentabilidad: en el campo argentino, reducir la huella de carbono ya es una “especialidad”.</p>
-              <div class="card-actions justify-start">
+              <div class="card-actions justify-center">
                 <a class="no-underline mt-6 inline-block bg-primary text-white px-6 py-3 rounded-lg shadow-sm hover:bg-primaryhover"
                 href="https://www.infocampo.com.ar/sustentabilidad-en-el-campo-argentino-reducir-la-huella-de-carbono-ya-es-una-especialidad/" target="_blank">Ver</a>
               </div>
@@ -85,17 +87,18 @@
 
           <!-- Card 3 -->
           <div class="card card-compact bg-base-100 w-full shadow-xl">
-            <figure>
+            <figure class="h-48">
               <img
-                src="https://www.65ymas.com/uploads/s1/13/55/32/8/bigstock-one-old-senior-couple-at-home-470532111.jpeg"
-                alt="Factura de luz y gas" />
+                src="https://www.murcia.com/noticias/fotos/1118132557w2.jpg"
+                alt="Factura de luz y gas"
+                class="h-full w-full object-cover"/>
             </figure>
             <div class="card-body">
-              <h2 class="card-title">Cómo leer mi factura</h2>
-              <p>Cómo leer las facturas de luz y gas para saber cuánto SUBSIDIO recibo.</p>
-              <div class="card-actions justify-start">
+              <h2 class="card-title">10 formas de reducir tu huella de carbono</h2>
+              <p>Sé verde, te damos algunos sencillos consejos que puedes incorporar a tu vida cotidiana y lograr un planeta más vivible.</p>
+              <div class="card-actions justify-center">
                 <a class="no-underline mt-6 inline-block bg-primary text-white px-6 py-3 rounded-lg shadow-sm hover:bg-primaryhover"
-                href="https://www.baenegocios.com/economia/Como-leer-las-facturas-de-luz-y-gas-para-saber-cuanto-SUBSIDIO-recibo-20240722-0016.html" target="_blank">Ver</a>
+                href="https://www.ngenespanol.com/naturaleza/10-formas-de-reducir-tu-huella-de-carbono/" target="_blank">Ver</a>
               </div>
             </div>
           </div>
