--- a/frontend/src/app/routes/misuscription/misuscription.component.html
+++ b/frontend/src/app/routes/misuscription/misuscription.component.html
@@ -1,27 +1,28 @@
 <app-panel-title title="Mis Suscripciones" description="Administra y revisa tus planes de suscripción aquí."></app-panel-title>
-<div class="py-1 px-3">
-
-  <div class="container mx-auto py-2">
+<div class="content-wrapper py-1 px-3">
+  <div class="content-inner rounded shadow-lg px-3 mb-2">
     <h2 class="text-2xl font-bold mb-4">Tus Planes Actuales</h2>
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
+
+      <!-- Componente de Plan -->
       <div class="card card-compact bg-base-100 shadow-xl">
         <div class="card-body">
-          <h2 class="card-title">Plan Personal</h2>
+          <h3 class="card-title text-lg font-bold">Plan Personal</h3>
           <p class="text-xl font-bold">$59 / año</p>
           <p>Acceso a todas las funciones básicas.</p>
-          <div class="card-actions justify-end">
+          <div class="card-actions justify-center">
             <a href="#" class="btn" style="background-color: #3690d9; color: white;">Administrar</a>
-
           </div>
         </div>
       </div>
 
+      <!-- Repetir para cada plan -->
       <div class="card card-compact bg-base-100 shadow-xl">
         <div class="card-body">
-          <h2 class="card-title">Plan Empresarial</h2>
+          <h3 class="card-title text-lg font-bold">Plan Empresarial</h3>
           <p class="text-xl font-bold">$199 / año</p>
           <p>Acceso a todas las funciones premium.</p>
-          <div class="card-actions justify-end">
+          <div class="card-actions justify-center">
             <a href="#" class="btn" style="background-color:#3690d9; color: white;">Administrar</a>
           </div>
         </div>
@@ -29,10 +30,10 @@
 
       <div class="card card-compact bg-base-100 shadow-xl">
         <div class="card-body">
-          <h2 class="card-title">Plan Profesional</h2>
+          <h3 class="card-title text-lg font-bold">Plan Profesional</h3>
           <p class="text-xl font-bold">$250 / año</p>
           <p>Soporte completo y acceso a todas las funciones.</p>
-          <div class="card-actions justify-end">
+          <div class="card-actions justify-center">
             <a href="#" class="btn" style="background-color: #3690d9; color: white;">Administrar</a>
           </div>
         </div>
