--- a/frontend/src/app/routes/carbon-footprint/carbon-footprint/carbon-footprint.component.html
+++ b/frontend/src/app/routes/carbon-footprint/carbon-footprint/carbon-footprint.component.html
@@ -1,9 +1,5 @@
 <app-panel-title title="Tu Huella de Carbono" description="Descubre el impacto de tu consumo energético en el medio ambiente y aprende cómo reducir tu huella de carbono para un futuro más sostenible."></app-panel-title>
 <div class="py-1 px-3">
- <div class="rounded shadow-lg p-2">
-    <h1 class="text-lg font-bold mb-4">Tu Huella de Carbono</h1>
-    <p class="text-sm text-gray-600">Descubre el impacto de tu consumo energético en el medio ambiente y aprende cómo reducir tu huella de carbono para un futuro más sostenible.</p>
-  </div>
     <div class="container mx-auto py-4">
       <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-8" >
           <app-card-info
@@ -61,7 +57,7 @@
             <div class="card-body">
               <h2 class="card-title">¿Qué es la huella de carbono?</h2>
               <p>Explicación clara y concisa sobre qué es la huella de carbono, cómo se genera y cómo el consumo eléctrico contribuye a ella.</p>
-              <div class="card-actions justify-centerv ">
+              <div class="card-actions justify ">
                 <a class="no-underline mt-6 inline-block bg-primary text-white px-6 py-3 rounded-lg shadow-sm hover:bg-primaryhover"
                 href="https://espanol.epa.gov/la-energia-y-el-medioambiente/emisiones-de-dioxido-de-carbono" target="_blank">Ver</a>
               </div>
@@ -79,7 +75,7 @@
             <div class="card-body">
               <h2 class="card-title">Sustentabilidad</h2>
               <p>Sustentabilidad: en el campo argentino, reducir la huella de carbono ya es una “especialidad”.</p>
-              <div class="card-actions justify-center">
+              <div class="card-actions justify">
                 <a class="no-underline mt-6 inline-block bg-primary text-white px-6 py-3 rounded-lg shadow-sm hover:bg-primaryhover"
                 href="https://www.infocampo.com.ar/sustentabilidad-en-el-campo-argentino-reducir-la-huella-de-carbono-ya-es-una-especialidad/" target="_blank">Ver</a>
               </div>
@@ -97,7 +93,7 @@
             <div class="card-body">
               <h2 class="card-title">10 formas de reducir tu huella de carbono</h2>
               <p>Sé verde, te damos algunos sencillos consejos que puedes incorporar a tu vida cotidiana y lograr un planeta más vivible.</p>
-              <div class="card-actions justify-center">
+              <div class="card-actions justify">
                 <a class="no-underline mt-6 inline-block bg-primary text-white px-6 py-3 rounded-lg shadow-sm hover:bg-primaryhover"
                 href="https://www.ngenespanol.com/naturaleza/10-formas-de-reducir-tu-huella-de-carbono/" target="_blank">Ver</a>
               </div>
