--- a/frontend/src/app/routes/misuscription/misuscription.component.html
+++ b/frontend/src/app/routes/misuscription/misuscription.component.html
@@ -1,10 +1,10 @@
 <app-panel-title title="Mis Suscripciones" description="Administra y revisa tus planes de suscripción aquí."></app-panel-title>
 <div class="content-wrapper py-4 px-3">
-  <div class="content-inner rounded shadow-lg px-3 mb-6"> <!-- Cambié el margen inferior de 2 a 6 para más espacio -->
+  <div class="content-inner rounded shadow-lg px-3 mb-6">
     <h2 class="text-2xl font-bold mb-4">Tus Planes Actuales</h2>
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
 
-      <!-- Componente de Plan -->
+
       <div class="card card-compact bg-base-100 shadow-xl">
         <div class="card-body">
           <h3 class="card-title text-lg font-bold">Plan Personal</h3>
