--- a/frontend/src/app/routes/landing-page/landing-page.component.html
+++ b/frontend/src/app/routes/landing-page/landing-page.component.html
@@ -13,8 +13,8 @@
              alt="Your Company (Mobile)">
 
         <div class="space-x-4">
-          <a [routerLink]="['/login']" class="text-primary hover:bg-primaryhover hover:text-white font-semibold px-4 py-2 rounded-md">Log in</a>
-          <a [routerLink]="['/register']" class="bg-primary text-white px-4 py-2 rounded-md hover:bg-primaryhover">Sign up</a>
+          <a [routerLink]="['/login']" class="text-primary hover:bg-primaryhover hover:text-white font-semibold px-4 py-2 rounded-md">Iniciar sesión</a>
+          <a [routerLink]="['/register']" class="bg-primary text-white px-4 py-2 rounded-md hover:bg-primaryhover">Regístrate</a>
         </div>
       </div>
     </header>
